# Syinx

./: LICENSE  README.md
Pool/MysqlPool/: README.md  SyMysqlConPool.cpp  SyMysqlConPool.h
Pool/pthreadpool/: README.md  SyPthreadPool.cpp
Syinx/: CMakeLists.txt  MakeInstall.sh  main.cpp
Syinx/Syinx/: SyAdapter.h  SyConfig.h  SyInc.h  SyResAdapter.cpp  SyResAdapter.h  SyTaskAdapter.cpp  SyTaskAdapter.h  Syinx.cpp  Syinx.h
Syinx/Sylog/: SyLog.cpp  SyLog.h  easylogging++.cc
Syinx/module/: SyMysqlConPool.cpp  SyMysqlConPool.h  SyPthreadAdapter.cpp  SyPthreadAdapter.h  SyPthreadPool.cpp  SyPthreadPool.h
before/0.1.0/: IChannel.cpp  IChannel.h  IProtocol.cpp  IProtocol.h  IRole.cpp  IRole.h  PlayerState.h  ProtocolMsg.cpp  ProtocolMsg.h  SyZinx.cpp  SyZinx.h  SyZinxData.cpp  main.cpp  msg.pb.cc  msg.pb.h  msg.proto
before/0.1.1/: Adapter.cpp  Adapter.h  Log.cpp  Log.h  SyZinx.cpp  SyZinx.h  Sypth.cpp  channel.cpp  config.cpp  main.cpp  pthreadpool.cpp  pthreadpool.h  res.cpp  threadpool.c
before/0.1.2/: Log.cpp  Log.h  SyAdapter.h  SyConfig.cpp  SyConfig.h  SyDef.h  SyPthreadAdapter.cpp  SyPthreadAdapter.h  SyPthreadPool.cpp  SyPthreadPool.h  SyResAdapter.cpp  SyResAdapter.h  SyTaskAdapter.cpp  (+4 more)
examples/: example1.cpp  examples1.cpp
lib/: CMakeLists.txt  SyAdapter.cpp  SyAdapter.h  SyConfig.cpp  SyConfig.h  SyInc.h  SyLog.cpp  SyLog.h  SyMysqlConPool.cpp  SyMysqlConPool.h  SyPthreadAdapter.cpp  SyPthreadAdapter.h  SyPthreadPool.cpp  SyPthreadPool.h  SyResAdapter.cpp  SyResAdapter.h  SyTaskAdapter.cpp  SyTaskAdapter.h  Syinx.cpp  Syinx.h  SyinxMysql.h  main.cpp
(+13 files in other folders)
